--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mobileftpserver.MainActivity$PlaceholderFragment" >
+    tools:context="com.dy.mobileftpserver.MainActivity$PlaceholderFragment" >
 
     <TextView
         android:id="@+id/section_label"
